--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.1.0",
+    "hashids": "^2.2.8",
     "jsonwebtoken": "^8.5.1",
     "kcors": "^2.2.2",
     "koa": "^2.11.0",
